QPID-8186 Use const ref when catching exceptions